feat(análisis de repositorios): integrar el adaptador GithubApiAdapter para obtener el árbol de archivos de un repositorio, mejorando la obtención de la estructura del proyecto; actualizar el controlador GetRepositoryAnalysisQueryHandler para calcular total de archivos, carpetas y profundidad máxima; agregar pruebas unitarias para validar la funcionalidad del análisis de estructura y resumen técnico del repositorio.