@@ -4,6 +4,7 @@ import com.drhdn.ghvis.application.query.GetRepositoryAnalysisQuery;
 import com.drhdn.ghvis.domain.port.CacheService;
 import com.drhdn.ghvis.domain.port.LanguageRepository;
 import com.drhdn.ghvis.domain.port.TechnologyRepository;
+import com.drhdn.ghvis.infrastructure.adapter.outbound.external.GithubApiAdapter;
 import com.drhdn.ghvis.domain.event.EventStore;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -31,6 +32,7 @@ public class GetRepositoryAnalysisQueryHandler {
     private final CacheService cacheService;
     private final EventStore eventStore;
     private final TechnologyRepository technologyRepository;
+    private final GithubApiAdapter githubApiAdapter;
     
     /**
      * Maneja la query para obtener análisis de repositorio.
@@ -150,13 +152,24 @@ public class GetRepositoryAnalysisQueryHandler {
      * Obtiene la estructura del proyecto.
      */
     private Mono<Map<String, Object>> getProjectStructure(String owner, String repo, Principal principal) {
-        // Aproximación rápida: calcular número de archivos por extensión a partir de lenguajes
-        return languageRepository.getLanguagesMap(owner, repo, principal)
-            .map(langMap -> {
-                int totalFiles = langMap.size();
+        return githubApiAdapter.getRepositoryTree(owner, repo, null, principal)
+            .map(treeList -> {
+                int totalFiles = 0;
+                int totalFolders = 0;
+                int maxDepth = 0;
+
+                for (Map<String, Object> node : treeList) {
+                    String type = (String) node.getOrDefault("type", "");
+                    String path = (String) node.getOrDefault("path", "");
+                    if (type.equals("blob")) totalFiles++; else if (type.equals("tree")) totalFolders++;
+                    int depth = path.split("/").length;
+                    if (depth > maxDepth) maxDepth = depth;
+                }
+
                 Map<String, Object> structure = new HashMap<>();
                 structure.put("totalFiles", totalFiles);
-                structure.put("rootFolders", Collections.emptyList());
+                structure.put("totalFolders", totalFolders);
+                structure.put("maxDepth", maxDepth);
                 structure.put("generatedAt", java.time.Instant.now().toString());
                 return structure;
             })
@@ -167,19 +180,37 @@ public class GetRepositoryAnalysisQueryHandler {
      * Obtiene el resumen técnico del repositorio.
      */
     private Mono<Map<String, Object>> getTechnicalSummary(String owner, String repo, Principal principal) {
-        // Crear un resumen técnico básico
-        Map<String, Object> summary = Map.of(
-            "repositoryName", repo,
-            "repositoryOwner", owner,
-            "projectPurpose", "Propósito no disponible",
-            "mainTechnologies", Collections.emptyList(),
-            "rolesAndResponsibilities", "",
-            "achievements", Collections.emptyList(),
-            "codeSnippets", Collections.emptyList(),
-            "documentationQuality", ""
-        );
-        
-        return Mono.just(summary);
+        Mono<Map<String, Long>> langMono = languageRepository.getLanguagesMap(owner, repo, principal)
+                .defaultIfEmpty(Collections.emptyMap());
+
+        Mono<List<Object>> techMono = technologyRepository.detectTechnologies(owner, repo, principal)
+                .map(t -> (Object) t)
+                .collectList()
+                .defaultIfEmpty(Collections.emptyList());
+
+        return Mono.zip(langMono, techMono)
+            .map(tuple -> {
+                Map<String, Long> langs = tuple.getT1();
+                List<Object> techs = tuple.getT2();
+
+                String mainLanguage = langs.entrySet().stream()
+                        .max(Map.Entry.comparingByValue())
+                        .map(Map.Entry::getKey)
+                        .orElse("Desconocido");
+
+                Map<String, Object> summary = new HashMap<>();
+                summary.put("repositoryName", repo);
+                summary.put("repositoryOwner", owner);
+                summary.put("mainLanguage", mainLanguage);
+                summary.put("languageCount", langs.size());
+                summary.put("mainTechnologies", techs.stream().limit(5).toList());
+                summary.put("generatedAt", java.time.Instant.now().toString());
+                summary.put("projectPurpose", "Propósito no disponible");
+                summary.put("rolesAndResponsibilities", "");
+                summary.put("achievements", Collections.emptyList());
+                summary.put("documentationQuality", "");
+                return summary;
+            });
     }
     
     /**
